# ComEdPrices

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
